# nirmaan_stack_frappe15_postgres_14

./: .gitattributes  .gitignore  .lsp.json  BACKEND_ARCHITECTURE.md  CLAUDE.md  CODEBASE_ASSESSMENT.md  CONTEXT.md  DEVELOPMENT_GUIDE.md  IMPROVEMENT_CHECKLIST.md  LICENSE  PLATFORM_OVERVIEW.md  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  verify_pmo_fix.py
.claude/: CHANGELOG.md  settings.json  settings.local.json
.claude/context/: _index.md  apis.md  doctypes.md  integrations.md  patterns.md  workflows.md
.claude/hooks/: README.md  guard_claude_md.py
.githooks/: commit-msg
.github/: labeler.yml
.github/workflows/: build_push.yml  ci.yml  tag.yml
backup-policy/: README.md  backup_and_upload.sh  manage_gcs_retention.sh  sync_to_drive.sh
docs/: architecture_diagram.md  ceo_hold_auto_management.md  coding_standards.md  feature_development_examples.md
docs/adr/: 0001-project-tendering-status.md  0002-boq-review-ai-classifier.md  0002-loss-justification-scope.md  0003-dual-provider-boq-ai-assist.md  0005-claude-classifier-chunking.md  0006-ai-apply-block-then-revert.md  (+6 more)
frontend/: .env  .env.production  CLAUDE.md  cypress.config.ts  index.html  package-lock.json  package.json  proxyOptions.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1712755890194-bb55960955cc3.mjs  vitest.config.ts
frontend/src/: App.tsx  (+5 more)
nirmaan_stack/: __init__.py  fix_preambles.py  hooks.py  install.py  modules.txt  patches.txt  populate_target_rates.py
scripts/: analyze_doctype_permissions.py
(+2484 files in other folders)
