[project]
name = "nirmaan_stack"
authors = [
    { name = "Abhishek", email = "techadmin@nirmaan.app"}
]
description = "A fully fledged commercial project management stack."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "firebase-admin~=6.5.0",
    "python-dotenv~=1.0.1",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    # Pinned: google-genai >= 1.56 raises its google-auth floor to >=2.48.1,
    # which conflicts with Frappe's google-auth~=2.40.3 pin. 1.55.x supports the
    # Gemini 3 APIs we use (thinking_level, media_resolution, vertexai). Bumping
    # this requires coordinating a Frappe google-auth bump.
    "google-genai>=1.55.0,<1.56.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
